[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlenti"
version = "1.0.0"
description = "Open-Source Sub-Pixel Lenticular Interlacing & Pitch Calibration Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antigravity AI Coding Agent Framework"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pillow>=10.0",
    "tifffile>=2023.7",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
gui = [
    "flet>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flet>=0.24",
]

[project.scripts]
openlenti = "openlenti.cli.main:app"
openlenti-gui = "openlenti.gui.app:run_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["openlenti*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
